--- a/hiera.yaml
+++ b/hiera.yaml
@@ -2,9 +2,9 @@
 :backends:
   - yaml
 :hierarchy:
-  - "%{clientcert}"
-  - "%{environment}"
+  - "node/%{::fqdn}"
+  - "%{::environment}"
   - global
 
 :yaml:
-  :datadir: '/etc/puppetlabs/puppet/hiera/hiera_%{environment}/hieradata'
+  :datadir: '/etc/puppetlabs/puppet/hiera/hiera_%{::environment}/hieradata'
