--- a/hiera.yaml
+++ b/hiera.yaml
@@ -4,7 +4,7 @@
 :hierarchy:
   - "node/%{::fqdn}"
   - "%{::environment}"
-  - global
+  - common
 
 :yaml:
   :datadir: '/etc/puppet/environments/%{::environment}/hieradata'
